# pdf-rm-tuc

./: .dir-locals.el  .gitignore  LICENSE  Makefile.am  README.ja.md  README.md  configure.ac
src/: Makefile.am  cmdlineparse.hh  main.cc  pdf-handler.cc  pdf-handler.hh
test/: Makefile.am  ascii-mix.tex  ascii.tex  check-testpdf.sh  kanji-mix.tex  kanji.tex  test-pdffonts.sh  test-pdftotext.sh
